<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExercise">

    <TextView
        android:id="@+id/add_excersize_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/set_new_excersize"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/add_excersize_relativeLayout"
        android:layout_below="@+id/add_excersize_title"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:background="@drawable/curved_relativelayout"
        android:backgroundTint="#CADAD6"
        android:orientation="vertical">

        <EditText
            android:id="@+id/add_excersize_set_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="50dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:hint="@string/set_excersize_name" />

        <TimePicker
            android:id="@+id/add_excersize_simpleTimePicker"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:timePickerMode="spinner" />

        <Button
            android:id="@+id/add_excersize_button"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_excersize_ask_text"
            android:backgroundTint="#16BFBF"
            android:textColor="@color/black"
            android:text="Button" />

        <TextView
            android:id="@+id/add_excersize_ask_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="how many times?" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/add_excersize_button">

            <EditText
                android:id="@+id/add_excersize_editTextTextPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:hint="ex: 30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repetition"
                android:textColor="@color/black"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>