<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".landing_page"
    android:background="@color/tosca">

    <LinearLayout
        android:id="@+id/landing_page_motive_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/motive_up">
        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/landing_page_character"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/character"
            android:layout_marginTop="50dp">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_hiro_can_assist_you"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/landing_page_sign_in"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sign_in_btn"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:background="@null"/>

        <ImageButton
            android:id="@+id/landing_page_sign_up"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sign_up_btn"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:background="@null"/>

        <ImageButton
            android:id="@+id/landing_page_google"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google"
            android:scaleX="0.8"
            android:scaleY="0.8"
            android:background="@null" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/landing_page_motive_down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/landing_page_motive_up"
        android:gravity="start">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/motive_down">
        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/landing_page_character"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="50dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_logo_background"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h_i_r_o"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_health_care_buddy"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>